tools/tests/errors/surf_cls_01.experr
cannot access private member
_balance
